Fixed negative margin causing horizontal scroll

--- a/styles/about.css
+++ b/styles/about.css
@@ -17,7 +17,7 @@
   display: grid;
   grid-gap: 20px;
   max-width: 500px;
-  margin: 0px -20px;
+  margin-left: -20px;
   padding: 50px;
   justify-items: start;
 
